# AUTOMATION_KESEF

./: .env  .gitignore  .pylintrc  README.md  _probe_add.py  conftest.py  debug_add_deal_validation.py  debug_add_deal_validation2.py  debug_add_deal_validation3.py  debug_add_deal_validation4.py  debug_add_deal_validation5.py  debug_add_deal_validation6.py  debug_add_deal_validation7.py  debug_validation_probe.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
fixtures/: client_data.json  deal_data.json
pages/: add_deal_page.py  all_loans_page.py  base_page.py  control_panel_page.py  dashboard_page.py  edit_payment_page.py  login_page.py  merchant_list_page.py  reports_page.py
reports/allure-results/: 0013d850-c739-4e0d-b951-4931fadb233a-container.json  005ee8af-b60f-45ca-8506-a3f54cf389dd-result.json  00d832e2-5e63-4921-92b1-594042b96cf8-container.json  00f48dad-f6e3-4331-8921-5fe750281aad-container.json  00fc9054-c494-49c1-ae12-1d96d218a5ad-result.json  011be2a5-8828-4588-930e-b47ceca551a7-container.json  012674e1-74f7-4e62-8292-e05ac30d6896-container.json  018c6dd8-a966-4938-90f9-a87a7b7935a4-result.json  01aee2ca-a872-4ff1-9554-3ba967312fce-container.json  01c3fa9e-abbc-454c-8a31-c1a75d1ec2ea-container.json  02137d41-a5c4-4dd8-b546-2970f5baad3f-container.json  0213eeb9-cf64-4517-bc30-319ae9b7c122-result.json  02219a30-9c0b-42e1-889a-0c09af245c39-container.json  02241d13-4152-4cba-8d9c-c12d5f8cf2c6-result.json  02526a72-8049-499a-9525-2359b30d17d2-container.json  (+1569 more)
tests/: test_tc01_login.py  test_tc02_control_panel.py  test_tc03_add_deal.py  test_tc04_fund_deal_calculations.py  test_tc05_payments.py  test_tc06_pause_resume.py  test_tc08_merchant_list.py  test_tc10_reports.py  test_tc12_tc20_control_panel_operations.py  test_tc13_cross_screen.py  test_tc15_role_access.py
utils/: api_client.py  calculations.py  data_helpers.py  logger.py
